--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "niktux/addendum" : "0.4.4",
         "aza/socket" : "1.0.2",
         "pleonasm/merkle-tree": "1.0.0",
-        "monolog/monolog": "1.7.0"
+        "monolog/monolog": "1.7.0",
+        "phpunit/phpunit": "4.0.*"
 	},
     "autoload": {
         "psr-4": {"PhpCoinD\\": "PhpCoinD/"}
