--- a/composer.json
+++ b/composer.json
@@ -12,16 +12,25 @@
 	"authors": [
 		{"name": "Aurélien RICHAUD", "email": "aurelien.richaud@btoweb.fr", "homepage": "https://github.com/vermi0ffh/"}
 	],
+    "repositories": [
+        {
+            "type": "composer",
+            "url": "https://packages.zendframework.com/"
+        }
+    ],
 	"require": {
 		"php": ">=5.4.0",
         "niktux/addendum" : "0.4.4",
         "aza/socket" : "1.0.2",
         "pleonasm/merkle-tree": "1.0.0",
         "monolog/monolog": "1.7.0",
-        "phpunit/phpunit": "4.0.*"
+        "phpunit/phpunit": "4.0.*",
+        "zendframework/zend-crypt": "2.*"
 	},
     "autoload": {
-        "psr-4": {"PhpCoinD\\": "PhpCoinD/"}
+        "psr-4": {
+            "PhpCoinD\\": "PhpCoinD/"
+        }
     },
     "bin": ["./coind.php"]
 }
